# A2A

./: .envrc  .gitignore  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
agent_registry/: Dockerfile  requirements.txt
agent_registry/app/: api.py  main.py  models.py  registry.py
docs/: api.md  architecture.md  testing_report.md
gateway/: requirements.txt
gateway/app/: config.py  evaluation.py  main.py  models.py
gateway/app/api/: auth.py  chat.py  health.py  providers.py
gateway/app/auth/: guard.py  tokens.py
gateway/app/guardrails/: scanner.py
gateway/app/providers/: schema.py  store.py  watcher.py
gateway/app/routing/: base.py  engine.py  round_robin.py  weighted.py
gateway/app/telemetry/: metrics.py
infra/grafana/provisioning/dashboards/: dashboards.yaml  gateway.json
infra/otel/: config.yaml
infra/prometheus/: prometheus.yml
load_tests/: locustfile.py
load_tests/results/: baseline_failures.csv  baseline_stats.csv  baseline_stats_history.csv
mock_llm/: Dockerfile
mock_llm/app/: responses.py  server.py
purple-agent/: requirements.txt
purple-agent/app/: agent.py  agent_card.py  handler.py  main.py
scripts/: demo.sh  evaluate.py
tests/: conftest.py
tests/integration/: conftest.py  test_gateway.py  test_providers.py  test_purple_agent.py  test_registry.py
tests/unit/: test_providers.py  test_routing.py
